--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,13 @@
 
 body {
     font-family: 'Manrope', sans-serif;
-    background-color: #F5F5F5;
 }
 img {
     display: block;
+}
+button {
+    font-family: "IBM Plex Mono";
+    font-style: normal;
 }
 .header__logo {
     cursor: pointer;
@@ -21,7 +24,7 @@ a {
 }
 /*header*/
 .header {
-    margin-bottom: 73.76px;
+    padding-bottom: 73.76px;
 }
 ul li {
     cursor: pointer;
@@ -58,7 +61,7 @@ ul li {
 }
 /*intro*/
 .intro {
-    margin-bottom: 155px;
+    padding-bottom: 155px;
 }
 .intro__wrapper {
     height: 500px;
@@ -72,7 +75,6 @@ ul li {
     letter-spacing: -1.8px;
 }
 .intro__image-first img{
-    position: absolute;
     max-width: 1150px;
     width: 100%;
     max-height: 500px;
@@ -81,7 +83,7 @@ ul li {
 .intro__text-first {
     max-width: 430px;
     position: relative;
-    top: 378px;
+    bottom: 122px;
     left: 40px;
     font-size: 19px;
     line-height: 27.32px;
@@ -92,7 +94,7 @@ ul li {
 }
 /*about*/
 .about {
-    margin-bottom: 149px;
+    padding-bottom: 149px;
 }
 h2.about__us {
     margin-bottom: 30px;
@@ -114,23 +116,21 @@ h2.about__text {
     padding: 20px 40px;
     background-color: #AD1818;
     color: #fff;
-    border: none;
+    border: solid 1px #AD1818;
     font-size: 20px;
     font-weight: 400;
     border-radius: 5px;
 }
 .about__button:hover {
     transition: 0.8s;
-    background-color: #fff;
-    border-left: 3px dotted #ef40b0;
-    border-right: 3px dotted #ef40b0;
     color: #AD1818;
-    background-color: rgb(226, 226, 196);
+    background-color: #fff;
+    border: solid 1px #AD1818;
 }
 /*projects*/
 
 .projects {
-    margin-bottom: 150px;
+    padding-bottom: 150px;
 }
 .projects__main-title {
     text-transform: uppercase;
@@ -147,7 +147,7 @@ h2.about__text {
     width: 100%;
     margin-bottom: 15px;
 }
-h2.project__title {
+h3.project__title {
     font-size: 30px;
     font-weight: 400;
     margin-bottom: 21px;
@@ -170,6 +170,8 @@ h2.project__title {
     margin: 0 auto;
 }
 .project__button {
+    font-family: "IBM Plex Mono";
+    font-style: normal;
     color: #AD1818;
     font-size: 30px;
     font-weight: 400;
@@ -186,6 +188,8 @@ h2.project__title {
     border: 0;
 }
 .project__button:hover {
+    font-family: "IBM Plex Mono";
+    font-style: normal;
     color: #fff;
     background-color: #AD1818;
     transition: 0.81s;
@@ -248,7 +252,7 @@ h2.project__title {
 }
 /*Contact*/
 .contact {
-    margin-bottom: 150px;
+    padding-bottom: 150px;
 }
 .phone__image {
     height: 22px;
@@ -326,4 +330,14 @@ h2.project__title {
     padding-bottom: 30px;
     color: #fff;
     opacity: 50%;
+}
+@media (max-width: 1150px) {
+    section {
+        padding-left: 15px;
+    }
+}
+@media (max-width: 767px) {
+    h2.about__text {
+        font-size: 35px;
+    }
 }
