--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,9 @@
-
 body {
     font-family: 'Manrope', sans-serif;
+    background-color: #F5F5F5;
 }
 img {
     display: block;
-}
-button {
-    font-family: "IBM Plex Mono";
-    font-style: normal;
 }
 .header__logo {
     cursor: pointer;
@@ -17,14 +13,21 @@ button {
     max-width: 1150px;
     width: 100%;
     margin: 0 auto;
+
 }
 a {
     cursor: pointer;
     text-decoration: none;
 }
+.container__second {
+    margin: 0 auto;
+    max-width: 1920px;
+    width: 100%;
+    background-color: #121212;
+}
 /*header*/
 .header {
-    padding-bottom: 73.76px;
+    margin-bottom: 73.76px;
 }
 ul li {
     cursor: pointer;
@@ -61,7 +64,7 @@ ul li {
 }
 /*intro*/
 .intro {
-    padding-bottom: 155px;
+    margin-bottom: 155px;
 }
 .intro__wrapper {
     height: 500px;
@@ -75,6 +78,7 @@ ul li {
     letter-spacing: -1.8px;
 }
 .intro__image-first img{
+    position: absolute;
     max-width: 1150px;
     width: 100%;
     max-height: 500px;
@@ -83,7 +87,7 @@ ul li {
 .intro__text-first {
     max-width: 430px;
     position: relative;
-    bottom: 122px;
+    top: 378px;
     left: 40px;
     font-size: 19px;
     line-height: 27.32px;
@@ -94,7 +98,7 @@ ul li {
 }
 /*about*/
 .about {
-    padding-bottom: 149px;
+    margin-bottom: 149px;
 }
 h2.about__us {
     margin-bottom: 30px;
@@ -116,21 +120,20 @@ h2.about__text {
     padding: 20px 40px;
     background-color: #AD1818;
     color: #fff;
-    border: solid 1px #AD1818;
+    border: none;
     font-size: 20px;
     font-weight: 400;
     border-radius: 5px;
 }
 .about__button:hover {
     transition: 0.8s;
-    color: #AD1818;
     background-color: #fff;
-    border: solid 1px #AD1818;
+    color: #AD1818;
 }
 /*projects*/
 
 .projects {
-    padding-bottom: 150px;
+    margin-bottom: 150px;
 }
 .projects__main-title {
     text-transform: uppercase;
@@ -147,7 +150,7 @@ h2.about__text {
     width: 100%;
     margin-bottom: 15px;
 }
-h3.project__title {
+h2.project__title {
     font-size: 30px;
     font-weight: 400;
     margin-bottom: 21px;
@@ -166,12 +169,7 @@ h3.project__title {
     border-bottom: solid 1px #dba718;
     color: #dba718;
 }
-.container__second {
-    margin: 0 auto;
-}
 .project__button {
-    font-family: "IBM Plex Mono";
-    font-style: normal;
     color: #AD1818;
     font-size: 30px;
     font-weight: 400;
@@ -184,20 +182,12 @@ h3.project__title {
     cursor: pointer;
     letter-spacing: -0.9px;
 }
-* {
-    border: 0;
-}
 .project__button:hover {
-    font-family: "IBM Plex Mono";
-    font-style: normal;
     color: #fff;
     background-color: #AD1818;
     transition: 0.81s;
 }
 /*Services*/
-.services {
-    background-color: #121212;
-}
 .services__title {
     background-color: #121212;
     text-transform: uppercase;
@@ -207,26 +197,8 @@ h3.project__title {
     padding-top: 151px;
     padding-bottom: 34px;
 }
-.bedroom {
-    margin-bottom: 150px;
-    background-image: url(../photos/Rectangle\ 5.png);
-    height: 717px;
-    position: relative;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 50%;
-}
-.bedroom__text {
-        position: absolute;
-        width: 443px;
-        bottom: 60px;
-        left: 125px;
-        font-size: 30px;
-        line-height: 41px;
-        letter-spacing: -0.03em;
-        color: #FFFFFF;
-}
 .wrapper__services {
+    padding-top: 7px;
     background-color: #121212;
     padding-bottom: 60px;
     display: flex;
@@ -235,13 +207,33 @@ h3.project__title {
 }
 .services__image img{
     margin-bottom: 15px;
-    max-width: 1150px;
     width: 100%;
 }
-.services__subtitle h3 {
+.services__subtitle {
+    letter-spacing: -0.25px;
     color: #fff;
-    font-size: 30px;
+    font-size: 29px;
     font-weight: 400;
+    padding-top: 6px;
+}
+
+.bedroom {
+    background-image: url(../photos/Rectangle\ 5.png);
+    height: 717px;
+    position: relative;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: bottom;
+}
+.bedroom__text {
+    position: absolute;
+    width: 443px;
+    bottom: 60px;
+    left: 125px;
+    font-size: 30px;
+    line-height: 41px;
+    letter-spacing: -0.03em;
+    color: #FFFFFF;
 }
 .wrapper__services-last {
     background-color: #121212;
@@ -252,6 +244,7 @@ h3.project__title {
 }
 /*Contact*/
 .contact {
+    padding-top: 151px;
     padding-bottom: 150px;
 }
 .phone__image {
@@ -330,14 +323,4 @@ h3.project__title {
     padding-bottom: 30px;
     color: #fff;
     opacity: 50%;
-}
-@media (max-width: 1150px) {
-    section {
-        padding-left: 15px;
-    }
-}
-@media (max-width: 767px) {
-    h2.about__text {
-        font-size: 35px;
-    }
 }
